--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_API_BASE_URL": "https://brevti.replit.app"
+        "EXPO_PUBLIC_API_BASE_URL": "https://brevti1-production.up.railway.app"
       }
     },
     "production": {
@@ -18,7 +18,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_API_BASE_URL": "https://brevti.replit.app"
+        "EXPO_PUBLIC_API_BASE_URL": "https://brevti1-production.up.railway.app"
       }
     }
   },
