--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
       [
         "expo-router",
         {
-          "origin": "https://replit.com/"
+          "origin": "https://brevti1-production.up.railway.app"
         }
       ],
       "expo-font",
