--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@expo-google-fonts/cairo": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@google/genai": "^1.40.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
     "@stardazed/streams-text-encoding": "^1.0.2",
