--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/react-query": "^5.83.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/pg": "^8.16.0",
     "@ungap/structured-clone": "^1.3.0",
     "axios": "^1.13.4",
     "better-sqlite3": "^12.6.2",
